spacing in mobile version fix

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1615,7 +1615,7 @@ body.bottom-nav header {
   position: relative;
   font-weight: medium;
   font-size: 2em;
-  font-family: 'Monument Extended';
+  font-family: 'monument_extendedregular';
 }
 
 .ml4 .letters-1 {
